Fixed User Comments Styling - profile misaligned

--- a/css/mycss.css
+++ b/css/mycss.css
@@ -466,10 +466,6 @@ ul {
     .upnext-video  {
         padding: 8px;
     }
-
-    .un-left {
-        
-    }
     .un-right {
         align-self: flex-end;
         color: #1119;
@@ -578,6 +574,8 @@ ul {
     .uc-box > .fa-user-circle {
         line-height: 1.5;
         font-size: 2.5em;
+        color: #0A5FD4;
+        padding-right: 20px;
     }
 
         .uc-info {
@@ -609,7 +607,7 @@ ul {
                 }
             .uc-likes-section  {
                 display: flex;
-                width: 15vw;
+                width: 150px;
                 justify-content: space-evenly;
             }
             
@@ -725,15 +723,6 @@ ul {
         .tn-info {
             display: inline-flex;
             max-width: 80vw;
-        }
-        .tn-title {
-
-        }
-        .tn-channel {
-
-        }
-        .tn-views {
-
         }
     
     .userComment-column {
